# reelcast

./: .gitignore  Cargo.toml  build.rs
docs/: vlc-formats.md
scripts/: gencert  plz  setup-certs.sh
src/: cache.rs  config.rs  db.rs  error.rs  index.html  main.rs  net.rs  qr.rs  scanner.rs  serve.rs  sessions.rs  setup.html  ui.rs  vlc.rs
ui/: package-lock.json
ui/control/: index.html
ui/svelte/: .gitignore  package-lock.json  package.json  svelte.config.js
ui/svelte/src/: app.html
ui/svelte/src/lib/: player.ts  types.ts  utils.ts
ui/svelte/src/lib/components/: MediaCard.svelte  Player.svelte  RecentShelf.svelte
ui/svelte/src/routes/: +page.svelte
