[package]
name = "reelcast"
version = "0.1.0"
edition = "2021"
description = "Zero-copy local media server with VLC client support"

[[bin]]
name = "reelcast"
path = "src/main.rs"

[dependencies]
# Web
axum = { version = "0.7", features = ["http2", "macros"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }

# DB — native-tls avoids ring/rustls/zstd chain
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }

# Search — tantivy deferred; SQLite LIKE covers MVP
# tantivy = "..."

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem scanning
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Misc
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
regex-lite = "0.1"
dirs-next = "2"
# TLS via tokio-rustls directly
tokio-rustls = "0.24"
rustls-pemfile = "1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
