[package]
name = "reelcast"
version = "0.1.0"
edition = "2021"
description = "Zero-copy local media server with VLC client support"

[features]
default = ["media-player", "svelte"]
media-player = []
vlc = []
svelte = []  # build.rs runs npm run build in ui/svelte/, embedded via rust-embed

[[bin]]
name = "reelcast"
path = "src/main.rs"

[dependencies]
# Web
axum = { version = "0.7", features = ["http2", "macros"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http2", "macros"] }
tower = { version = "0.4", features = ["util"] }

# TLS
tokio-rustls = "0.24"
rustls-pemfile = "1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# DB
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem scanning
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Misc
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
regex-lite = "0.1"
dirs-next = "2"
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg", "unicode"] }

[build-dependencies]
# build.rs uses std only — no extra deps needed
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
